name:           parsec-pratt
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         Julian Hall
tested-with:    GHC==7.10.2
synopsis:       Pratt Parser (aka Top Down Operator Precedence Parser) combinator for Parsec
category:       Text

executable parsec-pratt-example
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   parsec >= 3.1 && < 4,
                   containers >= 0.5.6.2 && < 0.6,
                   pretty >=1.1 && <1.2
  ghc-options:     -Wall
  other-modules:   Text.Parsec.PrattParser

library 
  build-depends:   
                   base >= 4,
                   parsec >=3.1 && < 4,
                   containers >= 0.5.6.2 && < 0.6
  hs-source-dirs:  src
  ghc-options:     -Wall
  exposed-modules: Text.Parsec.PrattParser

